trying to fix scroll problem on ios safari

--- a/src/styles/web/themes/items.styl
+++ b/src/styles/web/themes/items.styl
@@ -47,6 +47,7 @@
       flex-column()
       padding s("calc(%s - 1rem)", 2.666*baseFontSize) // 2*pad
       overflow auto
+      -webkit-overflow-scrolling touch
 
       .text
         flex 1
