--- a/src/styles/web/themes/layout.styl
+++ b/src/styles/web/themes/layout.styl
@@ -16,6 +16,7 @@ main
   margin auto
   background-clip border-box
   overflow hidden auto
+  -webkit-overflow-scrolling touch
 
   .page
     position absolute
